snapshots/syntax/library/statements/ch_drive/chdrive_at_module_level.snap
---
source: src/syntax/library/statements/ch_drive.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: ChDriveStatement
      children:
        - kind: ChDriveKeyword
          text: ChDrive
        - kind: Whitespace
          text: " "
        - kind: StringLiteral
          text: "\"D:\""
        - kind: Newline
          text: "\n"
