snapshots/syntax/library/statements/ch_drive/chdrive_with_variable.snap
---
source: src/syntax/library/statements/filesystem/ch_drive.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: ChDriveStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: ChDriveKeyword
                  text: ChDrive
                - kind: Whitespace
                  text: " "
                - kind: Identifier
                  text: myDrive
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
